syntax = "proto3";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option go_package = "pspb";

option optimize_for = SPEED;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;
option (gogoproto.gostring_all) = false;
option (gogoproto.equal_all) = true;
option (gogoproto.verbose_equal_all) = false;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all) = true;
option (gogoproto.populate_all) = true;
option (gogoproto.testgen_all) = false;
option (gogoproto.benchgen_all) = false;
option (gogoproto.goproto_getters_all) = false;


enum OpType {
    NOOP = 0;
    // Creates the resource. If there is an existing document with the id, then it won't be removed.
    CREATE = 1;
    // Updates  document. If there an existing document with the id, it will be replaced.
    MERGE = 2;
    //create document if exits it will overy write but version not ++
    REPLACE = 3;
    // Deletes a document
    DELETE = 4;
}


message UpdateSpace {
    bytes Space = 1;
    uint64 version = 2;
}

message Failure {
    string doc_id = 1;
    string cause = 2;
}

message EngineFailure {
    string type = 1;
    string reason = 2;
    int64 status = 3;
}

enum FieldType {
    NULL = 0;
    STRING = 1;
    INT = 2;
    FLOAT = 3;
    BOOL = 4;
    GEOPOINT = 5;
    DATE = 6;
    VECTOR = 7;
    LONG = 8;
}

enum FieldOption {
    Null = 0;
    Index = 1;
}

message Vector {
    repeated float feature = 1 [packed = true];
    string source = 2;
}

message TimeStamp {
    int64 sec = 1;
    int64 usec = 2;
}

message Geo {
    double lon = 1;
    double lat = 2;
}

message Field {
    string name = 1;
    FieldType type = 2;
    bytes value = 3 [(gogoproto.nullable) = true];
    FieldOption option = 4;
}

message DocCmd {
    OpType type = 1;
    string doc_id = 2;
    int64 version = 3;
    //PulloutVersion in docCmd specified version in DocCmd is pulled out
    //from engine or user specified
    bool pullout_version = 4;
    uint32 slot = 5;
    bytes source = 6;
    repeated Field fields = 7;
    int32 retry_on_conflict = 8;
}